[package]
name = "druid_table"
version = "0.1.0"
authors = ["Robert Wittams <robert@wittams.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#druid = {version="0.6.0", features =["im"]}
#druid = {path = "../druid/druid/", features=["im"]}
druid = {git = "https://github.com/rjwittams/druid", branch="binding-scroll", features=["im"] }
im = { version = "15.0.0"}
log = "0.4.8"
simple_logger = { version = "1.6.0", default-features = false }
float-ord = "0.2.0"