[package]
name = "druid_table"
version = "0.1.0"
authors = ["Robert Wittams <robert@wittams.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#druid = {git = "https://github.com/linebender/druid", features=["im"] }
#druid-widget-nursery = {git = "https://github.com/linebender/druid-widget-nursery"}
#druid_bindings = { git = "https://github.com/rjwittams/druid_bindings"}
druid = {path = "../druid/druid", features=["im"]}
druid_bindings = {path = "../druid_bindings"}
druid-widget-nursery = {path = "../druid-widget-nursery"}

im = { version = "15.0.0"}
log = "0.4.8"
simple_logger = { version = "1.6.0", default-features = false }
float-ord = "0.2.0"
itertools = "0.9.0"
lazy_static = "1.4.0"
rand = "0.7.3"